--- a/test-output/index.html
+++ b/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\Owner\AppData\Local\Temp\testng-eclipse-430037000\testng-customsuite.xml</span>
+                    <span>C:\Users\Owner\AppData\Local\Temp\testng-eclipse-366918035\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -92,7 +92,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">4 methods,   4 passed</span>
+                    <span class="method-stats">12 methods,   12 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -101,6 +101,16 @@
                       <a href="#" panel-name="suite-Default_suite" class="show-methods passed suite-Default_suite"> (show)</a> <!-- show-methods passed suite-Default_suite -->
                     </span>
                     <div class="method-list-content passed suite-Default_suite">
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="CodenBoxAutomation.CodenBoxAutomation.AppTest" class="method navigator-link" hash-for-method="Alert">Alert</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="CodenBoxAutomation.CodenBoxAutomation.AppTest" class="method navigator-link" hash-for-method="CalendarOpenTest">CalendarOpenTest</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
                         <a href="#" panel-name="suite-Default_suite" title="CodenBoxAutomation.CodenBoxAutomation.AppTest" class="method navigator-link" hash-for-method="Checkbox">Checkbox</a> <!-- method navigator-link -->
@@ -113,12 +123,42 @@
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="CodenBoxAutomation.CodenBoxAutomation.AppTest" class="method navigator-link" hash-for-method="EnableAndDisable">EnableAndDisable</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="CodenBoxAutomation.CodenBoxAutomation.AppTest" class="method navigator-link" hash-for-method="HideAndShow">HideAndShow</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="CodenBoxAutomation.CodenBoxAutomation.AppTest" class="method navigator-link" hash-for-method="Iframe">Iframe</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="CodenBoxAutomation.CodenBoxAutomation.AppTest" class="method navigator-link" hash-for-method="MouseHover">MouseHover</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
                         <a href="#" panel-name="suite-Default_suite" title="CodenBoxAutomation.CodenBoxAutomation.AppTest" class="method navigator-link" hash-for-method="RadioButton">RadioButton</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
                         <a href="#" panel-name="suite-Default_suite" title="CodenBoxAutomation.CodenBoxAutomation.AppTest" class="method navigator-link" hash-for-method="StaticDropdown">StaticDropdown</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="CodenBoxAutomation.CodenBoxAutomation.AppTest" class="method navigator-link" hash-for-method="SwitchTab">SwitchTab</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="CodenBoxAutomation.CodenBoxAutomation.AppTest" class="method navigator-link" hash-for-method="Table">Table</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -141,6 +181,20 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
+                  <a name="Alert">
+                  </a> <!-- Alert -->
+                  <span class="method-name">Alert</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="CalendarOpenTest">
+                  </a> <!-- CalendarOpenTest -->
+                  <span class="method-name">CalendarOpenTest</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
                   <a name="Checkbox">
                   </a> <!-- Checkbox -->
                   <span class="method-name">Checkbox</span>
@@ -151,6 +205,34 @@
                   <a name="DynamicDropdown">
                   </a> <!-- DynamicDropdown -->
                   <span class="method-name">DynamicDropdown</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="EnableAndDisable">
+                  </a> <!-- EnableAndDisable -->
+                  <span class="method-name">EnableAndDisable</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="HideAndShow">
+                  </a> <!-- HideAndShow -->
+                  <span class="method-name">HideAndShow</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="Iframe">
+                  </a> <!-- Iframe -->
+                  <span class="method-name">Iframe</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="MouseHover">
+                  </a> <!-- MouseHover -->
+                  <span class="method-name">MouseHover</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
@@ -167,12 +249,26 @@
                   <span class="method-name">StaticDropdown</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="SwitchTab">
+                  </a> <!-- SwitchTab -->
+                  <span class="method-name">SwitchTab</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="Table">
+                  </a> <!-- Table -->
+                  <span class="method-name">Table</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
           </div> <!-- suite-Default_suite-class-passed -->
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\Owner\AppData\Local\Temp\testng-eclipse-430037000\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\Owner\AppData\Local\Temp\testng-eclipse-366918035\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -221,28 +317,60 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(4);
+data.addRows(12);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'DynamicDropdown')
+data.setCell(0, 1, 'Iframe')
 data.setCell(0, 2, 'CodenBoxAutomation.CodenBoxAutomation.AppTest')
-data.setCell(0, 3, 1127);
+data.setCell(0, 3, 12558);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'Checkbox')
+data.setCell(1, 1, 'SwitchTab')
 data.setCell(1, 2, 'CodenBoxAutomation.CodenBoxAutomation.AppTest')
-data.setCell(1, 3, 143);
+data.setCell(1, 3, 9017);
 data.setCell(2, 0, 2)
-data.setCell(2, 1, 'StaticDropdown')
+data.setCell(2, 1, 'Alert')
 data.setCell(2, 2, 'CodenBoxAutomation.CodenBoxAutomation.AppTest')
-data.setCell(2, 3, 118);
+data.setCell(2, 3, 8381);
 data.setCell(3, 0, 3)
-data.setCell(3, 1, 'RadioButton')
+data.setCell(3, 1, 'EnableAndDisable')
 data.setCell(3, 2, 'CodenBoxAutomation.CodenBoxAutomation.AppTest')
-data.setCell(3, 3, 111);
+data.setCell(3, 3, 8289);
+data.setCell(4, 0, 4)
+data.setCell(4, 1, 'MouseHover')
+data.setCell(4, 2, 'CodenBoxAutomation.CodenBoxAutomation.AppTest')
+data.setCell(4, 3, 4239);
+data.setCell(5, 0, 5)
+data.setCell(5, 1, 'HideAndShow')
+data.setCell(5, 2, 'CodenBoxAutomation.CodenBoxAutomation.AppTest')
+data.setCell(5, 3, 4145);
+data.setCell(6, 0, 6)
+data.setCell(6, 1, 'CalendarOpenTest')
+data.setCell(6, 2, 'CodenBoxAutomation.CodenBoxAutomation.AppTest')
+data.setCell(6, 3, 3230);
+data.setCell(7, 0, 7)
+data.setCell(7, 1, 'DynamicDropdown')
+data.setCell(7, 2, 'CodenBoxAutomation.CodenBoxAutomation.AppTest')
+data.setCell(7, 3, 1121);
+data.setCell(8, 0, 8)
+data.setCell(8, 1, 'Table')
+data.setCell(8, 2, 'CodenBoxAutomation.CodenBoxAutomation.AppTest')
+data.setCell(8, 3, 226);
+data.setCell(9, 0, 9)
+data.setCell(9, 1, 'StaticDropdown')
+data.setCell(9, 2, 'CodenBoxAutomation.CodenBoxAutomation.AppTest')
+data.setCell(9, 3, 136);
+data.setCell(10, 0, 10)
+data.setCell(10, 1, 'Checkbox')
+data.setCell(10, 2, 'CodenBoxAutomation.CodenBoxAutomation.AppTest')
+data.setCell(10, 3, 132);
+data.setCell(11, 0, 11)
+data.setCell(11, 1, 'RadioButton')
+data.setCell(11, 2, 'CodenBoxAutomation.CodenBoxAutomation.AppTest')
+data.setCell(11, 3, 88);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 1 seconds</span>
+              <span class="suite-total-time">Total running time: 51 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -257,9 +385,16 @@ return data;
         </div> <!-- panel -->
         <div panel-name="ignored-methods-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">0 ignored methods</span>
+            <span class="header-content">1 ignored method</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
+            <div class="ignored-class-div">
+              <span class="ignored-class-name">CodenBoxAutomation.CodenBoxAutomation.AppTest</span>
+              <div class="ignored-methods-div">
+                <span class="ignored-method-name">SwitchWindow</span>
+                <br/>
+              </div> <!-- ignored-methods-div -->
+            </div> <!-- ignored-class-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
         <div panel-name="chronological-Default_suite" class="panel">
@@ -275,19 +410,51 @@ return data;
               </div> <!-- configuration-test before -->
               <div class="test-method">
                 <span class="method-name">RadioButton</span>
-                <span class="method-start">6644 ms</span>
+                <span class="method-start">11648 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">DynamicDropdown</span>
-                <span class="method-start">6763 ms</span>
+                <span class="method-start">11741 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">StaticDropdown</span>
-                <span class="method-start">7892 ms</span>
+                <span class="method-start">12863 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">Checkbox</span>
-                <span class="method-start">8012 ms</span>
+                <span class="method-start">13001 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">SwitchTab</span>
+                <span class="method-start">13135 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">Alert</span>
+                <span class="method-start">22152 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">Table</span>
+                <span class="method-start">30535 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">HideAndShow</span>
+                <span class="method-start">30762 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">EnableAndDisable</span>
+                <span class="method-start">34911 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">MouseHover</span>
+                <span class="method-start">43205 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">CalendarOpenTest</span>
+                <span class="method-start">47446 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">Iframe</span>
+                <span class="method-start">50678 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
